--- a/vignettes/feature_viewer.Rmd
+++ b/vignettes/feature_viewer.Rmd
@@ -7,14 +7,14 @@ editor_options:
   chunk_output_type: inline
 ---
 
-`STUtility2`'s Feature Viewer is an interactive application that can be run directly from R which makes it possible to interactively visualize features present in a `Seurat` object and it also makes it possible to manually annotate spots.
+`semla`'s Feature Viewer is an interactive application that can be run directly from R which makes it possible to interactively visualize features present in a `Seurat` object and it also makes it possible to manually annotate spots.
 
 Some of the functionality is similar to what you can do with the [Loupe Browser](https://www.10xgenomics.com/products/loupe-browser) or the [ST viewer](https://pubmed.ncbi.nlm.nih.gov/30875427/) but if you are using `Seurat` (or any other R package) for your analyses, it can be cumbersome to import/export results back and forth from R.
 
 Having the option to interactively explore an SRT data set can be very useful. For example, a common task is to manually annotate spots based on morphological features of an H&E image which can only be done through an interactive application. Moreover, when we map gene expression to our H&E images in R, it is often difficult to associate their patterns with small morphological structures. At a quick glance, the expression of marker genes associated with small structures might appear random in plots, and it is only when we zoom in at the H&E image that we can see the tissues and cells that they are associated with.
 
 ```{r message=FALSE, warning=FALSE}
-library(STUtility2)
+library(semla)
 ```
 
 ## Feature viewer
@@ -22,7 +22,7 @@ library(STUtility2)
 Using our mouse brain data set as an example, we'll go through how to use the `FeatureViewer()` application.
 
 ```{r fig.asp=1}
-se <- readRDS(system.file("extdata/mousecolon", "se_mcolon", package = "STUtility2")) |> 
+se <- readRDS(system.file("extdata/mousecolon", "se_mcolon", package = "semla")) |> 
   LoadImages()
 ImagePlot(se)
 ```
@@ -35,7 +35,7 @@ To initiate the viewer, we call the `FeatureViewer()` function with our `Seurat`
 
 When the app is closed, any changes made in the app will be returned to our `Seurat` object, so we need to call `se <- FeatureViewer(se)` to save changes to our `Seurat` object. It is important to note that the application should be exited by clicking on the '**save**' icon in the top right corner of the app, otherwise any changes that we've made will not be returned to R.
 
-NB: Like most functions provided in `STUtility2`, `FeatureViewer` only works with `Seurat` objects processed with `STUtility2`.
+NB: Like most functions provided in `semla`, `FeatureViewer` only works with `Seurat` objects processed with `semla`.
 
 ```{r eval=FALSE}
 se <- FeatureViewer(se)
@@ -128,8 +128,8 @@ se <- FeatureViewer(se, datadir = datapath)
 When using multiple datasets, you will be able to select them from the `Sample` drop-down list in the viewer. Note that when working with many datasets, the app might slow down considerably. In this case, it might be better to view only a few selected sections specified with `sampleIDs`.
 
 ```{r eval=FALSE}
-se_mbrain <- readRDS(system.file("extdata/mousebrain", "se_mbrain", package = "STUtility2"))
-se_mcolon <- readRDS(system.file("extdata/mousecolon", "se_mcolon", package = "STUtility2"))
+se_mbrain <- readRDS(system.file("extdata/mousebrain", "se_mbrain", package = "semla"))
+se_mcolon <- readRDS(system.file("extdata/mousecolon", "se_mcolon", package = "semla"))
 se_merged <- MergeSTData(se_mbrain, se_mcolon) |> LoadImages()
 se_merged <- FeatureViewer(se_merged)
 ```
@@ -143,7 +143,7 @@ se_merged <- FeatureViewer(se_merged)
 
 <summary>**Package version**</summary>
 
--   `STUtility2`: `r packageVersion("STUtility2")`
+-   `semla`: `r packageVersion("semla")`
 
 </details>
 
