--- a/vignettes/region_neighbors.Rmd
+++ b/vignettes/region_neighbors.Rmd
@@ -7,10 +7,10 @@ editor_options:
   chunk_output_type: inline
 ---
 
-In this notebook, we'll have a look at how you can use spatial methods in `STUtility2`. we will continue with the same Seurat object that we created in the '[radial distances](https://ludvigla.github.io/STUtility2/articles/radial_distances.html)' tutorial. If you haven't downloaded and processed the data yet, you should go back to that tutorial before continuing with the analysis presented here.
+In this notebook, we'll have a look at how you can use spatial methods in `semla`. we will continue with the same Seurat object that we created in the '[radial distances](https://ludvigla.github.io/semla/articles/radial_distances.html)' tutorial. If you haven't downloaded and processed the data yet, you should go back to that tutorial before continuing with the analysis presented here.
 
 ```{r warning=FALSE, message=FALSE}
-library(STUtility2)
+library(semla)
 library(tibble)
 library(ggplot2)
 library(patchwork)
@@ -117,7 +117,7 @@ If you want to select a wider band of spots surrounding a ROI, you can calculate
 
 <summary>**Package version**</summary>
 
--   `STUtility2`: `r packageVersion("STUtility2")`
+-   `semla`: `r packageVersion("semla")`
 
 </details>
 
